styles.css
body, html {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

hr {
  border: 0;
  clear:both;
  display:block;
  width: 96%;               
  background-color:#eee;
  height: 1px;
}

#email-grid {
  width: 100%;
  min-height: 150px;
  margin: 10% auto 0;
  background: #f5f5f5;
}

#email-builder {
  height: 100%;
  background:#f5f5f5;
}

#settings-container {
  height: 100%;
  background:#f5f5f5;
  border-right: 1px solid lightgrey;
}

.appearance, .content {
  width: 50%;
  text-align: center;
}

.block {
  width: 33%;
  margin: 4%;
  height: 100px;
  display: flex;
  flex: 1 0 20%;
  border-radius: 8px;
  background: #fff;
  border: 1px solid #eee;
  align-items: center;
  flex-direction: column;
  justify-content: center;
}

.block.image.contained {
  width: 100%;
  height: 100%;
  margin: 0;
  border-radius: 0;
  background: #eee;
}

.block.text.contained {
  width: 100%;
  height: 100%;
  margin: 0;
  border-radius: 0;
}

.block.text.uncontained {
  width: 100%;
  margin: 0;
  border: 0;
  border-radius: 0;
}

.block.spacer.uncontained {
  width: 100%;
  margin: 0;
  border: 0;
  border-radius: 0;
}

.block-wrapper {
  display: flex;
  flex-wrap: wrap;
}

.btn-link {
  color: #555;
  font-weight: 600;
  font-size: 15px;
  text-decoration: none !important;
}

.card {
  border-bottom: 1px solid #ddd;
}

.card-body {
  border-top: 1px solid #ddd;
}

.card-header {
  height: 44px;
  cursor: pointer;
  background: #fff;
}

.close-panel {
  top: 0;
  right: 0;
  width: 40px;
  height: 40px;
  color: #555;
  text-align: center;
  position: absolute;
  border-left: 1px solid #e6e6e6;
}

.close-panel > i {
  padding: 12px;
}

.col-100, .col-50-50, .col-33, .col-25, .col-33-66, .col-66-33 {
  height: 48px;
  width: 90%;
  padding: 8px;
  margin: 12px auto;
  background: #fff;
  display: flex;
  border: 1px solid #eee;
  border-radius: 8px;
  justify-content: space-between;
}

.col-100.placed-structure-block, 
.col-50-50.placed-structure-block, 
.col-33.placed-structure-block, 
.col-25.placed-structure-block, 
.col-33-66.placed-structure-block, 
.col-66-33.placed-structure-block {
  padding: 0;
  margin: 0 auto;
  border-radius: 0;
}

.col.hovered {
  border: 1px solid #364347 !important;
}

.col-100-item-container {
  width: 100%;
  height: 100%;
  background: aliceblue;
  border: 1px dashed skyblue;
}

.col-66-item-container {
  width: 65%;
  height: 100%;
  display: inline-block;
  background: aliceblue;
  border: 1px dashed skyblue;
}

.col-50-item-container {
  width: 49%;
  height: 100%;
  display: inline-block;
  background: aliceblue;
  border: 1px dashed skyblue;
}

.col-33-item-container {
  width: 32%;
  height: 100%;
  display: inline-block;
  background: aliceblue;
  border: 1px dashed skyblue;
}

.col-25-item-container {
  width: 23.5%;
  height: 100%;
  display: inline-block;
  background: aliceblue;
  border: 1px dashed skyblue;
}

.col-100-item-container.nested,
.col-66-item-container.nested,
.col-50-item-container.nested,
.col-33-item-container.nested,
.col-25-item-container.nested {
  height: 80%;
  margin: 10px;
}

#content-settings {
  right: 0;
  top: 20%;
  z-index: 1;
  height: 80%;
  width: 100%;
  position: absolute;
  transition: all .5s ease-in-out;
}

#content-settings.closed {
  top: 100%;
}

.content-settings-header {
  top: 0;
  color: #555;
  height: 40px;
  width: 100%;
  position: absolute;
  background: #fff;
  border-bottom: 1px solid #eee;
  box-shadow: 0 -2px 6px rgba(0,0,0,.2);
}

.content-settings-header > h5 {
  font-weight: bold;
  padding-left: 10px;
}

.content-settings-body {
  top: 40px;
  height: 100%;
  width: 100%;
  position: absolute;
  background: #f5f5f5;
}

.placed-structure-block {
  border: 0;
  width: 600px;
  height: 100px;
}

.placed-structure-block > div {
  display: flex;
  color: skyblue;
  align-items: center;
  justify-content: center;
}

.gu-mirror {
  position: fixed !important;
  margin: 0 !important;
  z-index: 9999 !important;
  opacity: 0.8;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
  filter: alpha(opacity=80);
}

.gu-hide {
  display: none !important;
}

.gu-unselectable {
  -webkit-user-select: none !important;
  -moz-user-select: none !important;
  -ms-user-select: none !important;
  user-select: none !important;
}
.gu-transit {
  opacity: 0.2;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
  filter: alpha(opacity=20);
}

.mb-0 {
  margin: 0;
  line-height: 44px;
}

.nav-tabs>li>a {
  color: #999;
  margin-right: 0;
}

.no-pad {
  padding: 0;
}

.no-select {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
   -khtml-user-select: none; 
     -moz-user-select: none; 
      -ms-user-select: none; 
      user-select: none;
}

.row-wrapper.hovered {
  border: 1px solid #364347;
}

.settings-nav {
  background: #fff;
}

.structure.hovered {
  border: 1px solid #364347;
}

a.tool-item, a.close-panel {
  text-decoration: none;
}

.tool-item {
  display: block;
  width: 40px;
  height: 40px;
  text-align: center;
  padding: 10px;
  border-radius: 6px;
  transition: none;
}

.tool-item:hover {
  cursor: pointer;
  background: #5e696d;
}

.tool-item > i {
  color: #ffffff;
}

.tool-items {
  width: 40px;
  height: 80px;
}

.tool-arrow {
  width: 0;
  height: 0;
  left: -14px;
  bottom: 40%;
  margin-top: -7px;
  position: absolute;
  border-width: 7px;
  border-style: solid;
  border-color: transparent #364347 transparent transparent;
}

.tool-container {
  background-color: #364347;
  background-size: 100% 100%;
  border-radius: 6px;
  position: absolute;
}

.uncontained.image {
  margin: 0;
  width: 100%;
  border-radius: 0;
  background: #eee;
}

.wrapper {
  height: 100%;
}

